Fixed popovers displaying on mobile. Fixed home page laundry image size on mobile. Fixed home page images not stacking on mobile.

--- a/app/scss/brands/maytag/_footer-mt.scss
+++ b/app/scss/brands/maytag/_footer-mt.scss
@@ -1,6 +1,7 @@
 .footer-wrapper {
 	position: relative;
 	z-index: 500;
+	width: 100%;
 }
 
 footer.maytag-mobile {display: none;}
